# Limes

./: .bumpversion.cfg  .clang-format  .clang-tidy  .cmake-format.json  .config.sh  .ecrc  .editorconfig  .gitattributes  .gitignore  .nitpick.toml  .pre-commit-config.yaml  2_dshape_8h.html  2_dshape_8h__dep__incl.map  2_dshape_8h__dep__incl.md5  2_dshape_8h__incl.map  2_dshape_8h__incl.md5  2_dshape_8h_source.html  3_dshape_8h.html  3_dshape_8h__dep__incl.map  3_dshape_8h__dep__incl.md5  3_dshape_8h__incl.map  3_dshape_8h__incl.md5  3_dshape_8h_source.html  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CMakePresets.json  CPackConfig.cmake  Doxyfile  Info.plist  LimesConfig.cmake  Makefile  Nodes.xml  README.md  Rakefile  Tokens.xml  _abstract_f_i_f_o_8h.html  _abstract_f_i_f_o_8h__dep__incl.map  _abstract_f_i_f_o_8h__dep__incl.md5  _abstract_f_i_f_o_8h__incl.map  (+2006 more)
binary_builder/: CMakeLists.txt  README.md  main.cpp
docs/: CMakeLists.txt  Doxyfile  DoxygenLayout.xml  Makefile  build_docs.cmake  citations.bib  conf.py  formulas.tex  index.rst
docs/doc/: binary_builder_cmake.doc  cmake.doc  docs.doc  find_limes.doc  main.doc  page_descriptions.doc  programs.doc  usage.doc
juce/: CMakeLists.txt  juce.doc
juce/plugins/: CMakeLists.txt
libs/: CMakeLists.txt  limes.h
libs/limes_audio/: CMakeLists.txt  README.md  limes_audio  limes_audio.h
libs/limes_audio/filters/: CMakeLists.txt  Coeffecients.cpp  Coeffecients.h  Filter.cpp  Filter.h
libs/limes_audio/midi/: CMakeLists.txt  PitchbendMapper.cpp  PitchbendMapper.h  VelocityMapper.cpp  VelocityMapper.h
libs/limes_audio/oscillators/: CMakeLists.txt  DetunableModel.cpp  DetunableModel.h  basic_oscillators.cpp  basic_oscillators.h
libs/limes_audio/pitch_detection/: CMakeLists.txt  PitchData.cpp  PitchData.h  PitchDetectionAlgorithm.cpp  PitchDetectionAlgorithm.h  PitchDetector.cpp  PitchDetector.h  yin.cpp  yin.h  zeroCrossing.cpp  zeroCrossing.h
libs/limes_audio/processors/: CMakeLists.txt  SampleProcessor.cpp  SampleProcessor.h
libs/limes_audio/psola/: CMakeLists.txt  PeakFinder.cpp  PeakFinder.h  PitchDetector.cpp  PitchDetector.h  analyzer.cpp  analyzer.h  shifter.cpp  shifter.h
libs/limes_audio/streams/: CMakeLists.txt  SampleStream.cpp  SampleStream.h  WhiteNoiseGenerator.cpp  WhiteNoiseGenerator.h  basic_oscillators.cpp  basic_oscillators.h  oscillator.cpp  oscillator.h
libs/limes_audio/util/: AudioBuffer.h  CMakeLists.txt  CircularBuffer.cpp  CircularBuffer.h  Misc.h  MonoStereoConverter.cpp  MonoStereoConverter.h  PerlinNoise.cpp  PerlinNoise.h  PitchDetector.cpp  PitchDetector.h  Windowing.h
libs/limes_core/: CMakeLists.txt  README.md  limes_core  limes_core.h  limes_core.i  limes_namespace.h
libs/limes_core/data_structures/: CMakeLists.txt  Dimensions.cpp  Dimensions.h  LinkedListModel.h  LinkedListModel_impl.h  Version.cpp  Version.h
libs/limes_core/files/: CFile.cpp  CFile.h  CMakeLists.txt  DynamicLibrary.cpp  DynamicLibrary.h  EmbeddedBinaries.cpp  EmbeddedBinaries.h  FilesystemEntry.cpp  FilesystemEntry.h  directory.cpp  directory.h  file.cpp  file.h  misc.cpp  misc.h  sym_link.cpp  sym_link.h
libs/limes_core/hashes/: CMakeLists.txt  common.cpp  common.h  hash.cpp  hash.h  md5.cpp  md5.h  sha1.cpp  sha1.h  sha224.cpp  sha224.h  sha256.cpp  sha256.h  (+4 more)
libs/limes_data_structures/: CMakeLists.txt  README.md  limes_data_structures.h
libs/limes_locale/: CMakeLists.txt  README.md  limes_locale.h
libs/limes_midi/: CMakeLists.txt  README.md  limes_midi  limes_midi.h
libs/limes_music/: CMakeLists.txt  README.md  limes_music  limes_music.h
libs/limes_vecops/: CMakeLists.txt  README.md  SelectImpl.cmake  limes_vecops  limes_vecops.h
limes_audio/: CMakeLists.txt  limes_audio.cmake  limes_audio.h
limes_audio/psola/: CMakeLists.txt  PeakFinder.cpp  PeakFinder.h
limes_audio/streams/: CMakeLists.txt  SampleStream.cpp  SampleStream.h  basic_oscillators.cpp  basic_oscillators.h  oscillator.cpp  oscillator.h
limes_audio/util/: CMakeLists.txt  Misc.h  MonoStereoConverter.cpp  MonoStereoConverter.h  PitchDetector.cpp  PitchDetector.h  Windowing.h
limes_core/: CMakeLists.txt  limes_core.cmake  limes_core.h
limes_core/data_structures/: CMakeLists.txt  Dimensions.cpp  Dimensions.h  LinkedListModel.h  LinkedListModel_impl.h  Version.cpp  Version.h
limes_core/math/: CMakeLists.txt  Fraction.h  Fraction_impl.h  mathHelpers.h
limes_core/misc/: Algorithm.h  CMakeLists.txt  Platform.h  TypeTraits.h  languages.cpp  languages.h
limes_core/text/: CMakeLists.txt  StringUtils.cpp  StringUtils.h  TextTable.cpp  TextTable.h
limes_core/threading/: CMakeLists.txt  RealtimeSafeObject.h  RealtimeTypeTraits.h  ThreadSafeObject.h
limes_music/: CMakeLists.txt  limes_music.cmake  limes_music.h
limes_music/harmony/: CMakeLists.txt  Chord.cpp  Chord.h  Pitch.cpp  Pitch.h  PitchClass.cpp  PitchClass.h  PitchUtils.h
limes_music/rhythm/: CMakeLists.txt  NoteDuration.h  NoteDuration_impl.h  NoteLength.cpp  NoteLength.h  NoteLength_impl.h  TimeSignature.h
limes_vecops/: CMakeLists.txt  limes_vecops.cmake  limes_vecops.h
limes_vecops/impl/: CMakeLists.txt  SelectImpl.cmake  check_intel.cpp  check_mipp.cpp  fallback.h  fallback_impl.h  ipp.h  mipp.h  vdsp.h
limes_vecops/util/: CMakeLists.txt  ConfigVecops.cmake  Constants.h  Platform.h
programs/: CMakeLists.txt  programs.doc
programs/binary_builder/: CMakeLists.txt  README.md  arguments.json  binary_builder.doc  commandLine.cpp  commandLine.h  generator.cpp  generator.h  main.cpp
programs/file_util/: CMakeLists.txt  README.md  arguments.json  commandLine.cpp  commandLine.h  file_util.doc  fileutil.cpp  fileutil.h  main.cpp  usage.cpp  usage.h
tests/: CMakeLists.txt  CMakePresets.json  Makefile  math_tests.cpp  tests_config.h
tests/limes_audio/: CMakeLists.txt  audio_test_utils.h  circularBuffer_tests.cpp
tests/limes_core/: CMakeLists.txt  math_tests.cpp  random_tests.cpp
tests/limes_data_structures/: CMakeLists.txt  abstractFifo_tests.cpp
tests/limes_music/: CMakeLists.txt  compoundInterval_tests.cpp  interval_tests.cpp  pitchClass_tests.cpp
(+3188 files in other folders)
